Add port configuration to network latency (#119)
* first commit to add port configuration to network latency

* fix licence header and fix vet issues

* fixing linting issues

* formatting go imports

* attempting again to correctly fmt

* revert dependencies which caused failures

* add mask to port filtering

* only add port if it is not 0

* need an integer for logic, not string

* fix linting issues

* trying to fix lint issues again

* fixing lint pt 3

* fixing lint pt4

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -70,10 +70,13 @@ spec:
                 hosts:
                   items:
                     type: string
-                  nullable: true
                   type: array
+                port:
+                  nullable: true
+                  type: integer
               required:
               - delay
+              - port
               type: object
             nodeFailure:
               description: NodeFailureSpec represents a node failure injection
