--- a/config/samples/deployment.yaml
+++ b/config/samples/deployment.yaml
@@ -23,4 +23,8 @@ spec:
     spec:
       containers:
       - name: demo
-        image: k8s.gcr.io/pause:3.1
+        image: nginx
+        securityContext:
+          capabilities:
+            add:
+              - NET_ADMIN
