--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -83,10 +83,11 @@ spec:
               - delay
               type: object
             networkLimitation:
-              description: NetworkLimitationSpec represents a network bandwidth limitation injection
+              description: NetworkLimitationSpec represents a network bandwidth limitation
+                injection
               nullable: true
               properties:
-                BytesPerSec:
+                bytesPerSec:
                   maximum: 59999
                   type: integer
               required:
