--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -74,13 +74,23 @@ spec:
                 hosts:
                   items:
                     type: string
+                  nullable: true
                   type: array
                 port:
                   nullable: true
                   type: integer
               required:
               - delay
-              - port
+              type: object
+            networkLimitation:
+              description: NetworkLimitationSpec represents a network bandwidth limitation
+                injection
+              nullable: true
+              properties:
+                bytesPerSec:
+                  type: integer
+              required:
+              - bytesPerSec
               type: object
             nodeFailure:
               description: NodeFailureSpec represents a node failure injection
