all mostly working now

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -89,6 +89,14 @@ spec:
               properties:
                 bytesPerSec:
                   type: integer
+                hosts:
+                  items:
+                    type: string
+                  nullable: true
+                  type: array
+                port:
+                  nullable: true
+                  type: integer
               required:
               - bytesPerSec
               type: object
