--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -27,3 +27,5 @@ spec:
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # shutdown the host instead of triggering a stack dump
   cpuPressure: {} # cpu load generator
+  networkLimitation:
+    bytesPerSec: 100000 # 100kbps, visible but not backbreaking
