--- a/config/samples/deployment.yaml
+++ b/config/samples/deployment.yaml
@@ -8,7 +8,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo
-  namespace: default
+  namespace: chaos-engineering
   labels:
     app: demo
 spec:
