Factor out networking impl in latency and bandwidth limit disruptions (#133)

--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -27,5 +27,5 @@ spec:
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # shutdown the host instead of triggering a stack dump
   cpuPressure: {} # cpu load generator
-  networkLimitation:
+  networkLimitation: # output bandwidth limit
     bytesPerSec: 100000 # 100kbps, visible but not backbreaking
