last commit before master merge

--- a/config/samples/deployment.yaml
+++ b/config/samples/deployment.yaml
@@ -23,4 +23,6 @@ spec:
     spec:
       containers:
       - name: demo
-        image: k8s.gcr.io/pause:3.1
+        image: nginx
+        ports:
+        - containerPort: 8080
