--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -13,8 +13,8 @@ spec:
     app: demo
   count: 1 # number of pods to target (-1 == target all the selected pods)
   networkFailure: # packet loss and connection
-    corrupt: 100 # probability to drop packets (between 0 and 100)
-    drop: 0
+    corrupt: 0     
+    drop: 0 # probability to drop packets (between 0 and 100)
     port: 8080 # port to drop packets on
     corrupt: 0
     protocol: tcp # protocol to drop packets on (can be tcp or udp)
