--- a/config/samples/deployment.yaml
+++ b/config/samples/deployment.yaml
@@ -23,6 +23,4 @@ spec:
     spec:
       containers:
       - name: demo
-        image: nginx
-        ports:
-        - containerPort: 8080
+        image: k8s.gcr.io/pause:3.1
