--- a/config/samples/complete.yaml
+++ b/config/samples/complete.yaml
@@ -12,13 +12,13 @@ spec:
   selector: # label selector to target pods
     app: demo
   count: 1 # number of pods to target (-1 == target all the selected pods)
-  networkFailure: # packet loss and connection drop
+  networkFailure: # packet loss and connection
     hosts:
-      - 10.0.0.0/8 # destination host
-    probability: 100 # probability to drop packets (between 0 and 100)
-    port: 80 # port to drop packets on
+        - 10.0.0.0/8 # destination host
+    corrupt: 0 # probability to corrupt packets (between 0 and 100)
+    drop: 0 # probability to drop packets (between 0 and 100)
+    port: 8080 # port to drop packets on
     protocol: tcp # protocol to drop packets on (can be tcp or udp)
-    allowEstablishment: true # allow connection to be established before dropping packets (drops established connections packets only)
   networkLatency: # network latency
     delay: 1000 # delay in ms
     hosts: # destination hosts to add latency to
