Enforce injector pods priority and qos to ensure they are not evicted easily

--- a/config/manager/priorityclass.yaml
+++ b/config/manager/priorityclass.yaml
@@ -2,14 +2,10 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2020 Datadog, Inc.
-
-resources:
-- manager.yaml
-- config.yaml
-- priorityclass.yaml
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-images:
-- name: controller
-  newName: chaos-controller
-  newTag: latest
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority
+value: 1000000
+globalDefault: false
+description: "This priority class should be used for chaos-injector service pods only."
