--- a/config/manager/config.yaml
+++ b/config/manager/config.yaml
@@ -18,6 +18,7 @@ data:
         "nodeName": "PLACEHOLDER"
       },
       "spec": {
+        "priorityClassName": "chaos-controller-high-priority",
         "restartPolicy": "Never",
         "containers": [
           {
@@ -53,6 +54,16 @@ data:
             ],
             "securityContext": {
               "privileged": true
+            },
+            "resources": {
+              "limits": {
+                "memory": "100Mi",
+                "cpu": 1
+              },
+              "requests": {
+                "memory": "100Mi",
+                "cpu": 1
+              }
             }
           }
         ],
