--- a/config/samples/network_disruption.yaml
+++ b/config/samples/network_disruption.yaml
@@ -12,7 +12,7 @@ spec:
   selector: # label selector to target pods
     app: demo
   count: 1 # number of pods to target (-1 == target all the selected pods)
-  network: # network disruption settings
+  network: # network disruption settings, all those disruptions are applied to outgoing traffic only
     hosts:
       - 10.0.0.0/8 # destination host
     port: 80 # port to drop packets on
