Fix release registries

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
 stages:
   - ci-image
   - build
+  - pre-release
   - release
   - release-public
 
@@ -58,38 +59,66 @@ build:make:
     - "size:large"
   image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:v2875076-79d562c-1.4.0
 
-# release
-# build the target from the local Dockerfile and push it unified registry
-.release: &release
+# pre-release
+# build the target from the local Dockerfile and push it to
+# AWS staging registry
+.pre-release: &pre-release
   <<: *meta-release
-  stage: release
+  stage: pre-release
   script:
-    - release.sh --build-from=./bin/manager/Dockerfile --build-context=./bin/manager/ registry.ddbuild.io/${CONTROLLER_IMAGE_NAME} ${TAG}
-    - release.sh --build-from=./bin/injector/Dockerfile --build-context=./bin/injector/ registry.ddbuild.io/${INJECTOR_IMAGE_NAME} ${TAG}
+    - release.sh --build-from=./bin/manager/Dockerfile --build-context=./bin/manager/ 727006795293.dkr.ecr.us-east-1.amazonaws.com/${CONTROLLER_IMAGE_NAME} ${TAG}
+    - release.sh --build-from=./bin/injector/Dockerfile --build-context=./bin/injector/ 727006795293.dkr.ecr.us-east-1.amazonaws.com/${INJECTOR_IMAGE_NAME} ${TAG}
   dependencies:
     - build:make
-  before_script:
-    - set -x
-    - ./ci/supplement_docker_headers.sh
 
-# release-ref
+# pre-release-ref
 # build a reference image tag for controller and injector
-release-ref:
-  <<: *release
+pre-release-ref:
+  <<: *pre-release
   when: manual
   except:
     - tags
   variables:
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
-# release-tag
+# pre-release-tag
 # build a tag image tag for controller and injector
-release-tag:
-  <<: *release
+pre-release-tag:
+  <<: *pre-release
   when: always
   only:
     - tags
   variables:
+    TAG: "${CI_COMMIT_TAG}"
+
+# release
+# build the target from the local Dockerfile and push it unified registry
+.release: &release
+  <<: *meta-release
+  stage: release
+  when: always
+  only:
+    - tags
+  script:
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE}:${TAG} eu.gcr.io/datadog-staging/${IMAGE} ${TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE}:${TAG} eu.gcr.io/datadog-prod/${IMAGE} ${TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE}:${TAG} 464622532012.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} ${TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE}:${TAG} 020998557671.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} ${TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE}:${TAG} registry.ddbuild.io/${IMAGE} ${TAG}
+  before_script:
+    - set -x
+    - ./ci/supplement_docker_headers.sh
+
+release-controller:
+  <<: *release
+  variables:
+    IMAGE: "${CONTROLLER_IMAGE_NAME}"
+    TAG: "${CI_COMMIT_TAG}"
+
+release-injector:
+  <<: *release
+  variables:
+    IMAGE: "${INJECTOR_IMAGE_NAME}"
     TAG: "${CI_COMMIT_TAG}"
 
 .release-docker-hub: &release-docker-hub
