--- a/config/samples/network_disruption.yaml
+++ b/config/samples/network_disruption.yaml
@@ -13,11 +13,11 @@ spec:
     app: demo
   count: 1 # number of pods to target (-1 == target all the selected pods)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
-    hosts:
+    hosts: # optional (targets all hosts if not specified)
       - 10.0.0.0/8 # destination host
-    port: 80 # port to drop packets on
-    protocol: tcp # protocol to drop packets on (can be tcp or udp)
-    drop: 10 # probability to drop packets (between 0 and 100)
-    corrupt: 5 # probability to corrupt packets (between 0 and 100)
-    delay: 1000 # latency to apply to packets in ms
-    bandwidthLimit: 10000 # bandwidth limit in bytes
+    port: 80 # optional, port to drop packets on
+    protocol: tcp # optional, protocol to drop packets on (can be tcp or udp, defaults to both)
+    drop: 10 # optional, probability to drop packets (between 0 and 100)
+    corrupt: 5 # optional, probability to corrupt packets (between 0 and 100)
+    delay: 1000 # optional, latency to apply to packets in ms
+    bandwidthLimit: 10000 # optional, bandwidth limit in bytes
