Switch injector resources to zero since we have the priority class now

--- a/config/manager/config.yaml
+++ b/config/manager/config.yaml
@@ -76,12 +76,12 @@ data:
             },
             "resources": {
               "limits": {
-                "memory": "100Mi",
-                "cpu": 1
+                "memory": 0,
+                "cpu": 0
               },
               "requests": {
-                "memory": "100Mi",
-                "cpu": 1
+                "memory": 0,
+                "cpu": 0
               }
             }
           }
