Allow to filter on ingress traffic

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -80,6 +80,11 @@ spec:
                   maximum: 100
                   minimum: 0
                   type: integer
+                flow:
+                  enum:
+                  - egress
+                  - ingress
+                  type: string
                 hosts:
                   items:
                     type: string
