Write spec hash in resource status to detect resource changes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -47,5 +47,7 @@ issues:
     # gosec
     - Subprocess launch(ed with variable|ing should be audited)
     - Expect file permissions to be 0600 or less
+    - Blacklisted import `crypto/md5`
+    - Use of weak cryptographic primitive
     # stylecheck
     - at least one file in a package should have a package comment
