--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -123,6 +123,9 @@ spec:
               type: boolean
             isInjected:
               type: boolean
+            specHash:
+              nullable: true
+              type: string
             targetPods:
               items:
                 type: string
