parent 08a6e4d3a0884ffe938a0f3d0e730d87dc3274fd author Azoam <sam.azouzi@datadoghq.com> 1602090999 -0400 committer Azoam <sam.azouzi@datadoghq.com> 1605895562 -0500 gpgsig -----BEGIN PGP SIGNATURE-----
 iQEzBAABCAAdFiEEzxPcLdRwVhRbT8HJYYKUES6OgCIFAl+4BYoACgkQYYKUES6O
 gCJmqAgAhjlBo9VJcFIIDEcNndDf/ljpTlVqOn7Rb5AWBA9Y8Z6IkqwOWhUF+7Ov
 q0Runjh6Cqv5hw/KBEnRUGovHjPuUxghFKZ0y7HefszrUfH1vsN7mxuiLVFB3Jp3
 dATNjSzFPpRxgPPgoK8d7F6u2/CgvFPysyeo4I0EfJ7Zh0P4uaBpcRG8+mURW0ZR
 6aBzftFeU//6W2ualYCFeCEA508UNRSpmGbBQXPRlkzsZQxkrVyiPoQhQl5Rpa3V
 E8jnjQolox7yLh73jMRX8FN0IFp9P7uy8YDndUi4FNiYvdqVCwxjE+eH5E1h4ucz
 rHNvUF4+AwJwX8AhbKhaWHU3G89OLw==
 =kjio
 -----END PGP SIGNATURE-----

parent 08a6e4d3a0884ffe938a0f3d0e730d87dc3274fd
author Azoam <sam.azouzi@datadoghq.com> 1602090999 -0400
committer Azoam <sam.azouzi@datadoghq.com> 1605895293 -0500
gpgsig -----BEGIN PGP SIGNATURE-----

 iQEzBAABCAAdFiEEzxPcLdRwVhRbT8HJYYKUES6OgCIFAl+4BH0ACgkQYYKUES6O
 gCLK1gf+P+nxqi6HxRl9L4UZCh8LdN2a49L0THOB7l/byID1yXtOnXpZVJArcaKC
 ymp+wmQqqlB9ESqKtHLHCs7/7CbYGEijq+lp9t8uvX2olj9/C1qekSU+7n3kHxV8
 Sxo0sRD4lvl579BcTgrhItRWRY+azqPp41jE7I6VJ0jtb7Ekk2ePKRgZjxcGA0QT
 b7bvqprJBndQWQ82SOiHjlyxRNQJms6EXVpq7GVEif7tcwGX6GZ+jOR/6ysPi6fX
 bhhLFaaSODjCnvUimIHjvJXOgJASXCq7ox3Z+c6sOHF/i3Z4Z3D8vOuS6xaStcrZ
 +l0XFgEQ8TGySiRK6484MSzLGvzTvg==
 =vUbv
 -----END PGP SIGNATURE-----

be able to use percent as the count parameter

updating samples/docs

fix lint and header ci issues

forgot about this from demos

fix some misleading comments

using index api rather than contains

use Ceiling instead of Round to avoid 0 issue

remove all references to -1, 100% will be used in its stead

remove unnecessary numPods logic

changing the type of count to intstr IntOrString

fix license issues

integrate necessary getScaled function into disruption code

fix linting issues

try fixing lint issues again

last linting issue

removing old comment and removing duplicate code line

be able to use percent as the count parameter

updating samples/

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -37,7 +37,10 @@ spec:
           description: DisruptionSpec defines the desired state of Disruption
           properties:
             count:
-              type: integer
+              anyOf:
+              - type: integer
+              - type: string
+              x-kubernetes-int-or-string: true
             cpuPressure:
               description: CPUPressureSpec represents a cpu pressure disruption
               nullable: true
