--- a/config/samples/complete.yaml
+++ b/config/samples/complete.yaml
@@ -12,7 +12,7 @@ spec:
   level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
   selector: # label selector to target pods
     app: demo
-  count: 1 # number of pods to target (-1 == target all the selected pods)
+  count: 1 # number of pods to target or a percentage (1% - 100%)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # optional, shutdown the host instead of triggering a stack dump (defaults to false)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
