--- a/config/samples/network_disruption_drop.yaml
+++ b/config/samples/network_disruption_drop.yaml
@@ -12,7 +12,7 @@ spec:
   level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
   selector: # label selector to target pods
     app: demo
-  count: 1 # number of pods to target (-1 == target all the selected pods)
+  count: 1 # number of pods to target or a percentage (1% - 100%)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
     hosts: # optional (targets all hosts if not specified)
       - 10.244.0.0/16 # destination host
