--- a/config/samples/node_failure_shutdown.yaml
+++ b/config/samples/node_failure_shutdown.yaml
@@ -11,6 +11,6 @@ metadata:
 spec:
   selector: # label selector to target pods
     app: demo
-  count: 1 # number of pods to target (-1 == target all the selected pods)
+  count: 1 # number of pods to target or a percentage (1% - 100%)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # shutdown the host instead of triggering a stack dump
