Remove iptables references

--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.11.2 as injector
 
 RUN apk update && \
-    apk add git gcc musl-dev iptables iproute2 coreutils
+    apk add git gcc musl-dev iproute2 coreutils
 
 COPY injector /usr/local/bin/injector
 
