Send a metric for stuck on removal disruptions

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -122,6 +122,8 @@ spec:
           properties:
             isInjected:
               type: boolean
+            isStuckOnRemoval:
+              type: boolean
             specHash:
               nullable: true
               type: string
