Retry cleanup when it fails (#172)

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -120,9 +120,9 @@ spec:
         status:
           description: DisruptionStatus defines the observed state of Disruption
           properties:
-            isFinalizing:
-              type: boolean
             isInjected:
+              type: boolean
+            isStuckOnRemoval:
               type: boolean
             specHash:
               nullable: true
