Make injector pod to use host PID namespace

--- a/config/manager/config.yaml
+++ b/config/manager/config.yaml
@@ -18,6 +18,7 @@ data:
         "nodeName": "PLACEHOLDER"
       },
       "spec": {
+        "hostPID": true,
         "priorityClassName": "chaos-controller-high-priority",
         "restartPolicy": "Never",
         "containers": [
