--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -61,6 +61,14 @@ spec:
               - path
               - throttling
               type: object
+            level:
+              description: DisruptionLevel represents which level the disruption should
+                be injected at
+              enum:
+              - pod
+              - node
+              - ""
+              type: string
             network:
               description: NetworkDisruptionSpec represents a network disruption injection
               nullable: true
