--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -88,6 +88,10 @@ spec:
                   maximum: 100
                   minimum: 0
                   type: integer
+                duplicate:
+                  maximum: 100
+                  minimum: 0
+                  type: integer
                 flow:
                   enum:
                   - egress
