--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -36,6 +36,8 @@ spec:
         spec:
           description: DisruptionSpec defines the desired state of Disruption
           properties:
+            container:
+              type: string
             count:
               anyOf:
               - type: integer
